--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -30,6 +30,7 @@
 
 .panel-header h1 {
     font-size: 28px;
+    border-bottom: 2px solid #666;
     margin: 0;
 }
 
@@ -45,7 +46,7 @@
     width: 800px; /* Set fixed width for the left section */
     background-color: #222121;
     padding: 20px;
-    border: 2px solid #666; /* Change to border-right */
+    border-right: 2px solid #666; /* Change to border-right */
     margin-right: 0;
     /* border-color: #2d2d2d;
     border-width: 2px; */
@@ -55,7 +56,7 @@
 /* Right Section Styles */
 .right-section {
     width: 400px; /* Set fixed width for the right section */
-    background-color: #444;
+    background-color: #222121;
     padding: 20px;
 }   
 
